# ccv-util

./: CMakeLists.txt  README.md
src/: ccv2.cpp  ccv_image.cpp  main.cpp
src/include/: ccv2.h  ccv_image.h  global.h
